--- a/public/computer/sem3/homepage.html
+++ b/public/computer/sem3/homepage.html
@@ -5,43 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GTU Diploma I.T Sem-1</title>
+    <title>GTU Diploma Computer Sem-3</title>
     <link rel="stylesheet" href="/be619.css">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma free books download , sem 1 books  , gtu diploma sem-1 it, GTU, free books , it">
+        content="gtu diploma free books download , sem-3 books  , gtu diploma sem-3 it, GTU, free books , it">
     <meta name="description"
-        content="Download Free GTU Diploma I.T as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BXEB1FWQF"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+        content="Download Free GTU Diploma Computer as well as ALL Branch Books, Syllabus, Practicals, all other study material at one place">
 
-            gtag('config', 'G-0BXEB1FWQF');
-        </script>
 </head>
 
 <body>
     <nav id="nav"></nav>
     <header>
-        <h1 class="ph748"> GTU Diploma I.T Sem-1 </h1>
+        <h1 class="ph748"> GTU Diploma Computer Sem-3 </h1>
 
     </header>
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/it/sem1/homepage.html">I.T Sem-1</a>
+            <a id="atnvli953" href="/computer/sem3/homepage.html">Computer Sem-3</a>
         </div>
     </div>
     <main>
         <!-- From  -->
         <span class="infdd">
             <span class="infsub">From: 2022-2023</span>
-            <span class="infsub">Branch Code:16</span>
+            <span class="infsub">Branch Code:07</span>
         </span>
         <!-- syllabus -->
         <div class="sydrp">
@@ -63,60 +55,66 @@
                     <th>Marks</th>
                 </tr>
                 <tr>
-                    <td>C4300001</td>
+                    <td>4330001</td>
                     <td>
-                        <a class="ssn" href="#">
-                            Mathematics
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1J_zvTQX_cblsvul7QZBOilaHdOEndtBS">
+                            Summer Internship-I
                         </a>
                     </td>
-                    <td>4</td>
-                    <td>100</td>
-                </tr>
-                <tr>
-                    <td>C4300002</td>
-                    <td>
-                        <a class="ssn" href="#">
-                            Communication Skill s in English
-                        </a>
-                    </td>
-                    <td>3</td>
-                    <td>150</td>
-                </tr>
-                <tr>
-                    <td>C4300015</td>
-                    <td>
-                        <a class="ssn" href="#">
-                            Sports and Yoga
-                        </a>
-                    </td>
-                    <td>0</td>
+                    <td>1</td>
                     <td>50</td>
                 </tr>
                 <tr>
-                    <td>C4311601</td>
+                    <td>4330701</td>
                     <td>
-                        <a class="ssn" href="#">
-                            Python Programming
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1VvhRVWJHXiOuQKZrcuSelR3Cliv5fvQI">
+                            Scripting Language -Python
                         </a>
                     </td>
                     <td>5</td>
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>C4311602</td>
+                    <td>4330702</td>
                     <td>
-                        <a class="ssn" href="#">
-                            Introduction to ITSystems
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1kD4nLFQg0qBYSUyo3Vn-A1BAxrbSXYRB">
+                            Relational Database Management System
                         </a>
                     </td>
                     <td>5</td>
                     <td>150</td>
                 </tr>
                 <tr>
-                    <td>C4311603</td>
+                    <td>4330703</td>
                     <td>
-                        <a class="ssn" href="#">
-                            Static Webpage Design
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1eeEmUj2is7EJdpR2AX1dK6ubPmFaJhgB">
+                            Basics of Operating System
+                        </a>
+                    </td>
+                    <td>4</td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td>4330704</td>
+                    <td>
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1Pb-HtJuDr10X1IILPXdlJiBeAdWz0E5Y">
+                            Data Structures and Algorithms
+                        </a>
+                    </td>
+                    <td>5</td>
+                    <td>150</td>
+                </tr>
+                <tr>
+                    <td>4330705</td>
+                    <td>
+                        <a class="ssn"
+                            href="https://drive.google.com/uc?export=download&id=1N6wipBQ223G3ugOX6TF0QGAWzKKhgjUJ">
+                            Responsive Web Page Design
                         </a>
                     </td>
                     <td>2</td>
@@ -125,17 +123,27 @@
             </table>
         </div>
 
-        <!-- Sem-1 -->
-        <div aria-label="main content " id="main" class="ab12345">
-            <!-- Python -->
-            <a href="/it/sem1/pythonprogramming.html">
+        <!-- Sem-3 -->
+        <div aria-label="main content " class="ab12345">
+            <!-- Scripting Language -Python  -->
+            <a href="/computer/sem3/SLP.html">
                 <div class="abc123456">
-                    <div class="img">
-                        <img class="i12345" src="/img/013.png" alt="" srcset="">
-                    </div>
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
                     <div class="mali147852">
-                        <h1 class="bn159">Python Programming </h1>
-                        <h1 class="d111">4311601</h1>
+                        <h1 class="bn159">Scripting Language -Python </h1>
+                        <h1 class="d111">4330701</h1>
+                        <h1 class="d212">Credit-5</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+                </div>
+            </a>
+            <!--  BCP -->
+            <a href="/computer/sem3/BCP.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/002.png" alt="coverpage">
+                    <div class="mali147852">
+                        <h1 class="bn159"> Relational Database Management System</h1>
+                        <h1 class="d111">4330702</h1>
                         <h1 class="d212">Credit-5</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
@@ -143,21 +151,22 @@
 
                 </div>
             </a>
-            <!-- IT SYS -->
-            <a href="/it/sem1/introductiontoitsystem.html">
+            <!--  FOEE -->
+            <a href="/computer/sem3/foee.html">
                 <div class="abc123456">
-                    <img class="i12345" src="/img/007.png" alt="" srcset="">
+                    <img class="i12345" src="/img/018.png" alt="coverpage">
                     <div class="mali147852">
-                        <h1 class="bn159">Introduction to IT Systems </h1>
-                        <h1 class="d111">4311602</h1>
-                        <h1 class="d212">Credit-5</h1>
+                        <h1 class="bn159">Fundamentals of Electrical and Electronics</h1>
+                        <h1 class="d111">4300018</h1>
+                        <h1 class="d212">Credit-4</h1>
                         <input class="kpb789123" type="button" value="Open">
                     </div>
+
 
                 </div>
             </a>
             <!-- Maths -->
-            <a href="/it/sem1/mathematics.html">
+            <a href="/computer/sem3/mathematics.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/008.png" alt="" srcset="">
                     <div class="mali147852">
@@ -171,7 +180,7 @@
                 </div>
             </a>
             <!-- English -->
-            <a href="/it/sem1/english.html">
+            <a href="/computer/sem3/english.html">
                 <div class="abc123456">
                     <img class="i12345" src="/img/014.png" alt="" srcset="">
                     <div class="mali147852">
@@ -189,13 +198,11 @@
             Checkout
         </h2>
         <div class="ch1233">
-            <a class="btnch22" href="/it/sem2/homepage.html">Sem-2</a>
-            <a class="btnch22" href="/it/sem3/homepage.html">Sem-3</a>
-            <a class="btnch22" href="/it/sem4/homepage.html">Sem-4</a>
-            <a class="btnch22" href="/it/sem5/homepage.html">Sem-5</a>
-            <a class="btnch22" href="/it/sem6/homepage.html">Sem-6</a>
-            <a class="btnch22" href="/it/sem7/homepage.html">Sem-7</a>
-            <a class="btnch22" href="/it/sem8/homepage.html">Sem-8</a>
+            <a class="btnch22" href="/computer/sem1/homepage.html">Sem-3</a>
+            <a class="btnch22" href="/computer/sem2/homepage.html">Sem-2</a>
+            <a class="btnch22" href="/computer/sem4/homepage.html">Sem-4</a>
+            <a class="btnch22" href="/computer/sem5/homepage.html">Sem-5</a>
+            <a class="btnch22" href="/computer/sem6/homepage.html">Sem-6</a>
         </div>
 
 
