--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,29 @@
     <meta http-equiv="content-language" content="en">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="Gtu books free download , Gtu diploma books download ,gtu rankers, download gtu diploma ,gtu Material, it">
+        content="Gtu books free download , Gtu diploma books download , download gtu diploma ,gtu Material, it">
     <meta name="audience" content="Everyone">
     <meta name="description"
         content="Get GTU Diploma All Branch All Semester  Books, Syllabus, Practical  PDF for Free, Diploma Engineering I.T,Computer, Civl, Mechanical,Electrical">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KhudKibook -Download GTU Books, old papers and more at one place </title>
+    <title>KhudKibook -Download GTU Books and more for Free</title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <link rel="stylesheet" href="/sld646.css">
     <link rel="stylesheet" href="/hip111.css">
     <link rel="stylesheet" href="/be619.css">
     <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
-        crossorigin="anonymous"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0BXEB1FWQF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-0BXEB1FWQF');
+    </script>
+
 
 
 
@@ -29,9 +37,8 @@
     <nav id="nav">
     </nav>
     <header>
-        <h1 class="ph748">GTU Diploma Books & Study Material</h1>
+        <h1 class="ph748">gtu diploma free books</h1>
     </header>
-    <hr>
     <main>
         <!-- add -->
         <amp-ad width="100vw" height="320" type="adsense" data-ad-client="ca-pub-4211827566541334" data-ad-slot="5361962105"
@@ -41,8 +48,9 @@
         <div class="nv759">
             <div class="nvl153">
                 <a id="atnvli953" href="/index.html">Home </a>
-        
+
             </div>
+        </div>
         </div>
         <div class="drp1qa">
             <h1 class="drphhw">Select Your Branch and Semester</h1>
@@ -64,36 +72,15 @@
                     <option value="4">Semester-4</option>
                     <option value="5">Semester-5</option>
                     <option value="6">Semester-6</option>
-                    <option value="7">Semester-7</option>
-                    <option value="8">Semester-8</option>
                 </select>
             </div>
             <input type="submit" id="submit" value="Submit">
         </div>
         <h1 class="kl789123">All Diploma GTU Latest Books</h1>
 
-        <div aria-label="main content " class="ab12345">
+        <div aria-label="main content " id="main" class="ab12345">
             <!-- English  -->
-            <a href="/common/">
-                <div class="abc123456">
-                    <img class="i12345" src="/img/014.png" alt="" srcset="">
-                    <div class="mali147852">
-                        <div>
-                            <h1 class="bn159">Communication Skills in English </h1>
-                        </div>
-                        <div>
-                            <h1 class="d111">Sem-1</h1>
-                            <h1 class="d212">All Branch</h1>
-                        </div>
-                        <div>
-                            <input class="kpb789123" type="button" value="Open >">
-                        </div>
-</div>
-
-
-                </div>
-
-            </a>
+            
             <!-- Maths sem1  -->
             <a id="macmli" href="/common/">
                 <div class="abc123456">
@@ -102,7 +89,7 @@
                         <h1 class="bn159">Mathematics </h1>
                         <h1 class="d111">Sem-1</h1>
                         <h1 class="d212">All Branch</h1>
-                        <input class="kpb789123" type="button" value="Open >">
+                        <input class="kpb789123" type="button" value="Open ">
                     </div>
                 </div>
             </a>
@@ -114,7 +101,7 @@
                         <h1 class="bn159">Environment and Sustainablity </h1>
                         <h1 class="d111">Sem-1 : Computer</h1>
                         <h1 class="d212">Sem-2 : IT, Mechanical, Electrical, Civil</h1>
-                        <input class="kpb789123" type="button" value="Open >">
+                        <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
             </a>
@@ -126,7 +113,7 @@
                         <h1 class="bn159">Python Programming</h1>
                         <h1 class="d111">Sem-1</h1>
                         <h1 class="d212">IT</h1>
-                        <input class="kpb789123" type="button" value="Open >">
+                        <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
             </a>
@@ -138,7 +125,7 @@
                         <h1 class="bn159">Introduction to IT Systems</h1>
                         <h1 class="d111">Sem-1</h1>
                         <h1 class="d212">IT</h1>
-                        <input class="kpb789123" type="button" value="Open >">
+                        <input class="kpb789123" type="button" value="Open">
                     </div>
                 </div>
             </a>
@@ -154,5 +141,6 @@
 <script src="/ru444.js"></script>
 <!-- <script src="/sld999.js"></script> -->
 <script src="select.js"></script>
+<script src="/json.js"></script>
 
 </html>
