--- a/public/it/sem1/pythonprogramming.html
+++ b/public/it/sem1/pythonprogramming.html
@@ -7,24 +7,22 @@
     <meta name="keywords"
         content="gtu diploma sem 1 books download , 4311601 ,Python Programming download for free , it">
     <meta name="audience" content="Everyone">
-    <meta name="d212ription"
+    <meta name="description"
         content=" Python Programming Sem-1 book Free Download | IT Sem-1 All Study Material free | Get GTU Diploma IT books free download |Sem-1 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Diploma Python Programming - KhudKibook </title>
-    <meta name="d212ription"
-        content="Download GTU Diploma Sem-1 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
+    <title>GTU IT Diploma Python Programming - KhudKibook </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
-    crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="/cd651.css">
-        <link rel="stylesheet" href="/be619.css">
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/cd651.css">
+    <link rel="stylesheet" href="/be619.css">
 
 </head>
 
 <body>
-    <nav id="nav" >
-        
+    <nav id="nav">
+
     </nav>
     <header>
         <h1 class="ph748">Python Programming Study Material </h1>
@@ -43,7 +41,7 @@
         <div class="mc759351">
 
             <div class="mc7593512">
-                <img class="mc7593512345" src="/img/013.png" alt="Book Photo" >
+                <img class="mc7593512345" src="/img/013.png" alt="Book Photo">
             </div>
             <div class="mac75935">
                 <h1 class="bn159">Python Programming</h1>
@@ -51,9 +49,33 @@
                 <h1 class="md111">4311601</h1>
                 <h1 class="md111">Credit-5</h1>
                 <div>
-                    <button class="kpb789123" id="mbt75935147">Book</button>
-                    <!-- btn content -->
-                    <div id="m1111" class="m741852">
+                    <button class="mdbtn" data-modal-id="modal-1">Book</button>
+                    <!-- Syllabus -->
+                    <a href="#">
+                        <button class="mdbtn">Syllabus</button>
+                    </a>
+                    <!-- Button 2 -->
+                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- Modal 1 -->
+                    <div class="m741852" id="modal-1">
+                        <div class="mc7913">
+                            <span class="mc718293">&times;</span>
+                            <a href="https://drive.google.com/uc?export=download&id=">Unit-1
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">Unit-2
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">Unit-3
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">Unit-4
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">Unit-5
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=">Full-Book
+                            </a>
+                        </div>
+                    </div>
+                    <!-- Modal 2 -->
+                    <div class="m741852" id="modal-2">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
                             <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
@@ -71,13 +93,6 @@
                         </div>
                     </div>
 
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="kpb789123" type="button" value="Syllabus">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="kpb789123" type="button" value="Paper">
-
-                    </a>
 
                 </div>
             </div>
@@ -98,52 +113,52 @@
     </div>
     <!-- Recommended -->
     <h1 class="kl789123">
-        Recommnded Acording to your Semester
+        Semester-1
     </h1>
     <div class="ab12345">
         <!-- IT SYS -->
         <a href="/it/sem1/introductiontoitsystem.html">
             <div class="abc123456">
                 <div class="img">
-                    <img class="i12345" src="/img/007.png" alt="coverpage" >
+                    <img class="i12345" src="/img/007.png" alt="coverpage">
                 </div>
                 <div class="mali147852">
                     <h1 class="bn159">Introduction to IT Systems </h1>
                     <h1 class="d111">4311602</h1>
                     <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
             </div>
         </a>
-       <!-- Maths -->
-       <a href="/it/sem1/mathematics.html">
-        <div class="abc123456">
-            <img class="i12345" src="/img/008.png" alt="coverpage" >
-            <div class="mali147852">
-                <h1 class="bn159">Mathematics </h1>
-                <h1 class="d111">4300001</h1>
-                <h1 class="d212">Credit-4</h1>
-                <input class="kpb789123" type="button" value="Open >">
+        <!-- Maths -->
+        <a href="/it/sem1/mathematics.html">
+            <div class="abc123456">
+                <img class="i12345" src="/img/008.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Mathematics </h1>
+                    <h1 class="d111">4300001</h1>
+                    <h1 class="d212">Credit-4</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                    </div>
+
+
             </div>
+            </a>
+            <!-- English -->
+            <a href="/it/sem1/english.html">
+                <div class="abc123456">
+                <img class="i12345" src="/img/014.png" alt="coverpage">
+                <div class="mali147852">
+                    <h1 class="bn159">Communication Skills in English </h1>
+                    <h1 class="d111">4300002</h1>
+                    <h1 class="d212">Credit-3</h1>
+                    <input class="kpb789123" type="button" value="Open">
+                    </div>
 
 
-        </div>
-    </a>
-    <!-- English -->
-    <a href="/it/sem1/english.html">
-        <div class="abc123456">
-            <img class="i12345" src="/img/014.png" alt="coverpage" >
-            <div class="mali147852">
-                <h1 class="bn159">Communication Skills in English </h1>
-                <h1 class="d111">4300002</h1>
-                <h1 class="d212">Credit-3</h1>
-                <input class="kpb789123" type="button" value="Open >">
             </div>
-
-
-        </div>
-    </a>
+            </a>
     </div>
     <!-- Sem-2 -->
     <h1 class="kl789123">Semester-2</h1>
@@ -152,14 +167,14 @@
         <a href="/it/sem2/advancepythonprogramming.html">
             <div class="abc123456">
                 <div class="img">
-                    <img class="i12345" src="/img/001.png" alt="coverpage" >
+                    <img class="i12345" src="/img/001.png" alt="coverpage">
 
                 </div>
                 <div class="mali147852">
                     <h1 class="bn159">Advance Python Programming </h1>
                     <h1 class="d111">4321602</h1>
                     <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
 
                 </div>
 
@@ -168,12 +183,12 @@
         <!-- Maths 2 -->
         <a href="/it/sem2/engineeringmathematics.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/022.png" alt="coverpage" >
+                <img class="i12345" src="/img/022.png" alt="coverpage">
                 <div class="mali147852">
                     <h1 class="bn159"> Engineering Mathematics </h1>
                     <h1 class="d111">4320002</h1>
                     <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
             </div>
@@ -181,12 +196,12 @@
         <!--  Physics -->
         <a href="/it/sem2/physics.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/037.png" alt="coverpage" >
+                <img class="i12345" src="/img/037.png" alt="coverpage">
                 <div class="mali147852">
                     <h1 class="bn159"> Physics </h1>
                     <h1 class="d111">4300005</h1>
                     <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
 
@@ -195,12 +210,12 @@
         <!-- ES -->
         <a href="/it/sem2/environmentandsustainability.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/005.png" alt="coverpage" >
+                <img class="i12345" src="/img/005.png" alt="coverpage">
                 <div class="mali147852">
                     <h1 class="bn159">Environment and Sustainability</h1>
                     <h1 class="d111">4300003</h1>
                     <h1 class="d212">Credit-3</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
 
@@ -214,14 +229,14 @@
         <a href="/it3/sem3/datastructurewithpython.html">
             <div class="abc123456">
                 <div class="img">
-                    <img class="i12345" src="/img/na.webp" alt="coverpage" >
+                    <img class="i12345" src="/img/na.webp" alt="coverpage">
 
                 </div>
                 <div class="mali147852">
                     <h1 class="bn159"> Data Structure with Python </h1>
                     <h1 class="d111">4330001</h1>
                     <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
 
                 </div>
 
@@ -230,12 +245,12 @@
         <!-- Database Management -->
         <a href="/it3/sem3/databasemanagement.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/035.png" alt="coverpage" >
+                <img class="i12345" src="/img/035.png" alt="coverpage">
                 <div class="mali147852">
                     <h1 class="bn159"> Database Management </h1>
                     <h1 class="d111">4331603</h1>
                     <h1 class="d212">Credit-5</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
             </div>
@@ -243,13 +258,12 @@
         <!--  Linux Operating System -->
         <a href="/it3/sem3/linuxoperatingsystem.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/036.png" alt="Image Not Avilable"
-                    >
+                <img class="i12345" src="/img/036.png" alt="Image Not Avilable">
                 <div class="mali147852">
                     <h1 class="bn159"> Linux Operating System </h1>
                     <h1 class="d111">4331602</h1>
                     <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
 
@@ -258,12 +272,12 @@
         <!--  Fundamentals of Software Development -->
         <a href="/it3/sem3/fundamentalofsoftwaredevelopment.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/030.png" alt="coverpage" >
+                <img class="i12345" src="/img/030.png" alt="coverpage">
                 <div class="mali147852">
                     <h1 class="bn159"> Fundamentals of Software Development </h1>
                     <h1 class="d111">4331604</h1>
                     <h1 class="d212">Credit-4</h1>
-                    <input class="kpb789123" type="button" value="Open >">
+                    <input class="kpb789123" type="button" value="Open">
                 </div>
 
 
@@ -271,8 +285,8 @@
         </a>
     </div>
     <!-- Footer -->
-<footer id="footer" >
-</footer>
+    <footer id="footer">
+    </footer>
 
 </body>
 <script src="/cd751.js"></script>
