--- a/public/it/sem2/environmentandsustainability.html
+++ b/public/it/sem2/environmentandsustainability.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem 2 books download , 4320002 ,Es,Environment and Sustainability download for free , it">
+        content="gtu diploma sem-2 books download , 4320002 ,Es,Environment and Sustainability download for free , it">
     <meta name="audience" content="Everyone">
     <meta name="description"
         content=" Environment and Sustainability Sem-2 book Free Download | IT Sem-2 All Study Material free | Get GTU Diploma IT books free download |Sem-2 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Diploma EngieeringMathematics - KhudKibook </title>
+    <title>IT Diploma Engieering Mathematics - KhudKibook </title>
     <meta name="description"
         content="Download GTU Diploma Sem-2 Books, Paper, Syllabus, and Practical at one place for free |GTU-KhudKibook">
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
@@ -39,42 +39,52 @@
     </div>
     <main>
         <div class="mc759351">
+
             <div class="mc7593512">
                 <img class="mc7593512345" src="/img/005.png" alt="Book Photo">
             </div>
             <div class="mac75935">
                 <h1 class="bn159">Environment and Sustainability</h1>
 
-                <h1 class="md111">430003</h1>
-                <h1 class="md111">Credit-3</h1>
+                <h1 class="md111">4320005</h1>
+                <h1 class="md111">Credit-4</h1>
                 <div>
-                    <button class="kpb789123" id="mbt75935147">Book</button>
-                    <!-- btn content -->
-                    <div id="m1111" class="m741852">
+                    <button class="mdbtn" data-modal-id="modal-1">Book</button>
+                    <!-- Syllabus -->
+                    <a href="https://drive.google.com/uc?export=download&id=1j_CTsR9z1qrgIoryR9NF1WiWcKRgN4B9">
+                        <button class="mdbtn">Syllabus</button>
+                    </a>
+                    <!-- Button 2 -->
+                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- Modal 1 -->
+                    <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
+                            <a href="https://drive.google.com/uc?export=download&id=1HkOUzKyz7bliRhnrsY_gjHHUm_LtWRNo">Unit-1
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=">UNIT-2
+                            <a href="https://drive.google.com/uc?export=download&id=1Dh9C0ytEr2icrx8crlm2lLiv1YqH3p_O">Unit-2
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1ZhT4_6ccqMNBoX5-paAXV21hjIs45zFk">UNIT-3
+                            <a href="https://drive.google.com/uc?export=download&id=18dvvFIdVwor6raQ6QoMkUt2Uk-3zfH-b">Unit-3
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1kz7AvYv6rk6V4KyL_35BMeE9tqOmseTb">UNIT-4
+                            <a href="https://drive.google.com/uc?export=download&id=1byMHCVJ8dlNoOJoGPEHhQXGC1cRZjACD">Unit-4
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1RUbeQnccxydHyeT5TQrguO9zuagGottB">UNIT-5
+                            <a href="https://drive.google.com/uc?export=download&id=1n_l4KezQbyZan9r8-GJm0hR6DMt_RwLY">Unit-5
                             </a>
-                            <a href="https://drive.google.com/uc?export=download&id=1fK5lcA2q0tD9gqV7YbRQFZCGivDUwoYw">Full-Book
+                            <a href="https://drive.google.com/uc?export=download&id=19mG9PrcAhBF_V7PErUq_l3aMNtlvDdyk">Full-Book
                             </a>
                         </div>
                     </div>
+                    <!-- Modal 2 -->
+                    <div class="m741852" id="modal-2">
+                        <div class="mc7913">
+                            <span class="mc718293">&times;</span>
+                            <a href="https://drive.google.com/uc?export=download&id=1ZybViB-_-HaTie5wf0N-fZLaMto2oa89">2023
+                            </a>
+                            <a href="https://drive.google.com/uc?export=download&id=1Td0cEXGFMpQT97mkauauyE2yBhwG926n">2021
+                            </a>
+</div>
+</div>
 
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="kpb789123" type="button" value="Syllabus">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="kpb789123" type="button" value="Paper">
-
-                    </a>
 
                 </div>
             </div>
