--- a/public/it/sem3/fundamentalofsoftwaredevelopment.html
+++ b/public/it/sem3/fundamentalofsoftwaredevelopment.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-3 books download , 4330001 ,Data Structure With Python download for free , it">
+        content="gtu diploma sem-3 books download , 4331604 ,Fundamentals of Software Development download for free , it">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Data Structure With Python Sem-3 book Free Download | IT Sem-3 All Study Material free | Get GTU Diploma IT books free download |Sem-3 Diploma Engineering">
+        content=" Fundamentals of Software Development Sem-3 book Free Download | IT Sem-3 All Study Material free | Get GTU Diploma IT books free download |Sem-3 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Diploma Data Structure With Python - KhudKibook </title>
+    <title>IT Diploma Fundamentals of Software Development - KhudKibook </title>
 
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
@@ -26,7 +26,7 @@
 
     </nav>
     <header>
-        <h1 class="ph748">Data Structure With Python Study Material </h1>
+        <h1 class="ph748">Fundamentals of Software Development Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
@@ -35,7 +35,8 @@
             <span class="nvsep729"> / </span>
             <a class="nvi751" href="/it/homepage.html">I.T Sem-3</a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/it/sem3/datastructurewithpython.html">Data Structure With Python</a>
+            <a id="atnvli953" href="/it/sem3/fundamentalofsoftwaredevelopment.html">Fundamentals of Software
+                Development</a>
         </div>
     </div>
     <main>
@@ -96,7 +97,23 @@
         Recommnded Acording to your Semester
     </h1>
     <div class="ab12345">
-        
+        <!-- Data Structure with Python -->
+        <a href="/it3/sem3/datastructurewithpython.html">
+            <div class="abc123456">
+                <div class="img">
+                    <img class="i12345" src="/img/na.webp" alt="coverpage">
+
+                </div>
+                <div class="mali147852">
+                    <h1 class="bn159"> Data Structure with Python </h1>
+                    <h1 class="d111">4330001</h1>
+                    <h1 class="d212">Credit-5</h1>
+                    <input class="kpb789123" type="button" value="Open >">
+
+                </div>
+
+            </div>
+        </a>
         <!-- Database Management -->
         <a href="/it3/sem3/databasemanagement.html">
             <div class="abc123456">
@@ -139,11 +156,11 @@
             </div>
         </a>
     </div>
-  
+
     <!-- Sem-2 -->
     <h1 class="kl789123">Semester-2</h1>
     <div class="ab12345">
-       
+
         <!-- Maths 2 -->
         <a href="/it/sem2/engineeringmathematics.html">
             <div class="abc123456">
@@ -202,8 +219,8 @@
     <!-- Sem-1 -->
     <h1 class="kl789123">Semester-1</h1>
     <div class="ab12345">
-         <!-- python-->
-         <a href="/it/sem1/pythonprogramming.html">
+        <!-- python-->
+        <a href="/it/sem1/pythonprogramming.html">
             <div class="abc123456">
                 <div class="img">
                     <img class="i12345" src="/img/013.png" alt="coverpage">
