--- a/public/it/sem4/essentialsofDigitalmarketing.html
+++ b/public/it/sem4/essentialsofDigitalmarketing.html
@@ -5,17 +5,14 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="keywords"
-        content="gtu diploma sem-3 books download , 4330001 ,Data Structure With Python download for free , it">
+        content="gtu diploma sem-4 books download , 4341601 ,Essential of Digital Marketing download for free , it">
     <meta name="audience" content="Everyone">
     <meta name="description"
-        content=" Data Structure With Python Sem-3 book Free Download | IT Sem-3 All Study Material free | Get GTU Diploma IT books free download |Sem-3 Diploma Engineering">
+        content=" Essential of Digital Marketing Sem-4 book Free Download | IT Sem-4 All Study Material free | Get GTU Diploma IT books free download |Sem-4 Diploma Engineering">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Diploma Data Structure With Python - KhudKibook </title>
-
+    <title>IT Diploma Essential of Digital Marketing - KhudKibook </title>
     <link rel="icon" type="image/x-icon" href="/img/bg.png">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4211827566541334"
-        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/cd651.css">
     <link rel="stylesheet" href="/be619.css">
 
@@ -26,32 +23,38 @@
 
     </nav>
     <header>
-        <h1 class="ph748">Data Structure With Python Study Material </h1>
+        <h1 class="ph748">Essential of Digital Marketing Study Material </h1>
     </header>
     <!-- navinfo -->
     <div class="nv759">
         <div class="nvl153">
             <a class="nvi751" href="/index.html">Home </a>
             <span class="nvsep729"> / </span>
-            <a class="nvi751" href="/it/homepage.html">I.T Sem-3</a>
+            <a class="nvi751" href="/it/sem4/homepage.html">I.T Sem-4</a>
             <span class="nvsep729"> / </span>
-            <a id="atnvli953" href="/it/sem3/datastructurewithpython.html">Data Structure With Python</a>
+            <a id="atnvli953" href="/it/sem4/essentialsofDigitalmarketing.html">Essential of Digital Marketing</a>
         </div>
     </div>
     <main>
         <div class="mc759351">
+
             <div class="mc7593512">
                 <img class="mc7593512345" src="/img/na.webp" alt="Book Photo">
             </div>
             <div class="mac75935">
-                <h1 class="bn159">Data Structure With Python</h1>
-
-                <h1 class="md111">4330001</h1>
+                <h1 class="bn159">Essential of Digital Marketing</h1>
+                <h1 class="md111">4331601</h1>
                 <h1 class="md111">Credit-5</h1>
                 <div>
-                    <button class="kpb789123" id="mbt75935147">Book</button>
-                    <!-- btn content -->
-                    <div id="m1111" class="m741852">
+                    <button class="mdbtn" data-modal-id="modal-1">Book</button>
+                    <!-- Syllabus -->
+                    <a href="https://drive.google.com/uc?export=download&id=1K6vRpaB6BzsHhWgtLwQ4VtpVCQv7P3PO">
+                        <button class="mdbtn">Syllabus</button>
+                    </a>
+                    <!-- Button 2 -->
+                    <button class="mdbtn" data-modal-id="modal-2">Paper</button>
+                    <!-- Modal 1 -->
+                    <div class="m741852" id="modal-1">
                         <div class="mc7913">
                             <span class="mc718293">&times;</span>
                             <a href="https://drive.google.com/uc?export=download&id=">UNIT-1
@@ -66,16 +69,19 @@
                             </a>
                             <a href="https://drive.google.com/uc?export=download&id=">Full-Book
                             </a>
+
+                        </div>
+                    </div>
+                    <!-- Modal 2 -->
+                    <div class="m741852" id="modal-2">
+                        <div class="mc7913">
+                            <span class="mc718293">&times;</span>
+
+                            <a>No Papers Avilable</a>
+
                         </div>
                     </div>
 
-                    <a href="https://drive.google.com/uc?export=download&id=13vnq7yujmZklvrTFrb_RYP0Ii2paSZN7">
-                        <input class="kpb789123" type="button" value="Syllabus">
-                    </a>
-                    <a href="https://drive.google.com/uc?export=download&id=17DM3fINbdhLGB8GSEHOnt3o_gsLJel84">
-                        <input class="kpb789123" type="button" value="Paper">
-
-                    </a>
 
                 </div>
             </div>
@@ -96,20 +102,89 @@
         Recommnded Acording to your Semester
     </h1>
     <div class="ab12345">
-        
-        <!-- Database Management -->
-        <a href="/it3/sem3/databasemanagement.html">
+        <div aria-label="main content " class="ab12345">
+
+            <!--  Web Development using PHP -->
+            <a href="/it/sem4/webdevelopmentusingPHP.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/na.webp" alt="" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159"> Web Development using PHP </h1>
+                        <h1 class="d111">4331604</h1>
+                        <h1 class="d212">Credit-2</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+
+
+                </div>
+            </a>
+        </div>
+        <!-- Elective -->
+        <h2 class="kl789123">
+            Elective
+        </h2>
+        <div aria-label="main content " class="ab12345">
+
+
+            <!-- Essence of Indian Knowledge and Tradition  -->
+            <a href="/it/sem4/essenceofindianKnowledge andtradition.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Essence of Indian Knowledge and Tradition</h1>
+                        <h1 class="d111">4340001</h1>
+                        <h1 class="d212">Credit-2</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+                </div>
+            </a>
+            <!--Contributor Personality Development  -->
+            <a href="/it/sem4/essenceofindianKnowledge andtradition.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Contributor Personality Development</h1>
+                        <h1 class="d111">4340002</h1>
+                        <h1 class="d212">Credit-2</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+                </div>
+            </a>
+            <!--Integrated Personality Development Course  -->
+            <a href="/it/sem4/essenceofindianKnowledge andtradition.html">
+                <div class="abc123456">
+                    <img class="i12345" src="/img/na.webp" alt="Image Not Avilable" srcset="">
+                    <div class="mali147852">
+                        <h1 class="bn159">Integrated Personality Development Course</h1>
+                        <h1 class="d111">4340003</h1>
+                        <h1 class="d212">Credit-2</h1>
+                        <input class="kpb789123" type="button" value="Open">
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <h1 class="kl789123">Semester-3</h1>
+
+    <div class="ab12345">
+        <!-- Data Structure with Python -->
+        <a href="/it3/sem3/datastructurewithpython.html">
             <div class="abc123456">
-                <img class="i12345" src="/img/035.png" alt="coverpage">
+                <div class="img">
+                    <img class="i12345" src="/img/na.webp" alt="coverpage">
+
+                </div>
                 <div class="mali147852">
-                    <h1 class="bn159"> Database Management </h1>
-                    <h1 class="d111">4331603</h1>
+                    <h1 class="bn159"> Data Structure with Python </h1>
+                    <h1 class="d111">4330001</h1>
                     <h1 class="d212">Credit-5</h1>
                     <input class="kpb789123" type="button" value="Open >">
+
                 </div>
 
             </div>
         </a>
+
         <!--  Linux Operating System -->
         <a href="/it3/sem3/linuxoperatingsystem.html">
             <div class="abc123456">
@@ -139,11 +214,11 @@
             </div>
         </a>
     </div>
-  
+
     <!-- Sem-2 -->
     <h1 class="kl789123">Semester-2</h1>
     <div class="ab12345">
-       
+
         <!-- Maths 2 -->
         <a href="/it/sem2/engineeringmathematics.html">
             <div class="abc123456">
@@ -202,8 +277,8 @@
     <!-- Sem-1 -->
     <h1 class="kl789123">Semester-1</h1>
     <div class="ab12345">
-         <!-- python-->
-         <a href="/it/sem1/pythonprogramming.html">
+        <!-- python-->
+        <a href="/it/sem1/pythonprogramming.html">
             <div class="abc123456">
                 <div class="img">
                     <img class="i12345" src="/img/013.png" alt="coverpage">
